# brb-qc

./: README.md  brb-qc.cabal
brb/: .cproject  .project
brb/inc/: brb.h  brb_interface.h
brb/src/: brb.c  brb_interface.c  main.c
src/: BrbFFI.hs  Main.hs  Tests.hs
