name:                brb-qc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mryndzionek/brb-qc#README.md
license:             BSD3
license-file:        LICENSE
author:              Mariusz Ryndzionek
maintainer:          mryndzionek@gmail.com
copyright:           2019 Mariusz Ryndzionek
category:            Other
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable brb-qc
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -g -Wno-missing-signatures
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       QuickCheck, mtl, split
  other-modules:       BrbFFI
                       Tests
  c-sources:           brb/src/brb.c,
                       brb/src/brb_interface.c
  include-dirs:        brb/inc
